[tool.poetry]
name = "quest"
version = "1.0"
description = ""
authors = ["marregui"]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "1.4.0"
psutil = "5.8.0"
psycopg2 = "2.9.3"
pytest = "^6.2.5"
pytz = "^2021.3"
black = "^21.12b0"
flake8 = "^4.0.1"
bandit = "^1.7.1"
safety = "^1.10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
