[tool.poetry]
name = "quest"
version = "1.0"
description = ""
authors = ["marregui"]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "1.4.0"
psutil = "5.9.3"
psycopg2 = "2.9.4"
pytest = "7.1.3"
pytz = "2022.5"
black = "22.10.0"
flake8 = "5.0.4"
bandit = "1.7.4"
safety = "2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
